update answer to last question

--- a/Week 2/Day 2/Assignment_Introduction_to_LangChain_v0_2_0_and_LCEL_LangChain_Powered_RAG.ipynb
+++ b/Week 2/Day 2/Assignment_Introduction_to_LangChain_v0_2_0_and_LCEL_LangChain_Powered_RAG.ipynb
@@ -1146,7 +1146,7 @@
       "source": [
         "\"LangChain Expression Language or LCEL is a declarative way to easily compose chains together. There are several benefits to writing chains in this manner (as opposed to writing normal code):\\n\\nAsync, Batch, and Streaming Support Any chain constructed this way will automatically have full sync, async, batch, and streaming support. This makes it easy to prototype a chain in a Jupyter notebook using the sync interface, and then expose it as an async streaming interface.\"\n",
         "\n",
-        "In other words, it abstracts away lots of pieces, such as async compatibility, that would otherwise need to be rewritten many times, allowing the developer to focus on the app's high level logic and design."
+        "In other words, it abstracts away lots of pieces, such as async compatibility, that would otherwise need to be rewritten many times, allowing the developer to focus on her app's high level logic and design. It also makes it easy to switch out components such as the specific LLM, model provider, and others."
       ]
     }
   ],
