--- a/Week 4/Day 1/Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
+++ b/Week 4/Day 1/Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
@@ -523,12 +523,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<font color=\"blue\">The distributions are used to indicate what fraction of questions in the final synthetic data set fall into each category. Using the distributions above, our final dataset will include:\n",
+        "<span style=\"color:blue\">The distributions are used to indicate what fraction of questions in the final synthetic data set fall into each category. Using the distributions above, our final dataset will include:\n",
         "- 50% simple questions\n",
         "- 40% multi_context questions, which require information from multiple chunks to answer\n",
         "- 10% reasoning questions, which are phrased in a way that require logical reasoning steps to answer\n",
         "\n",
-        "Since these specify the final distribution of our synthetic evaluation set, it's important that they add up to 1. The generator uses these to create a PDF to sample from as it evolves the question set."
+        "Since these specify the final distribution of our synthetic evaluation set, it's important that they add up to 1. The generator uses these to create a PDF to sample from as it evolves the question set.\n",
+        "</span>"
       ]
     },
     {
