--- a/Week 4/Day 1/Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
+++ b/Week 4/Day 1/Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
@@ -523,7 +523,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<span style=\"color:blue\">The distributions are used to indicate what fraction of questions in the final synthetic data set fall into each category. Using the distributions above, our final dataset will include:\n",
+        "<span style=\"color:blue\">\n",
+        "The distributions are used to indicate what fraction of questions in the final synthetic data set fall into each category. Using the distributions above, our final dataset will include:\n",
+        "\n",
         "- 50% simple questions\n",
         "- 40% multi_context questions, which require information from multiple chunks to answer\n",
         "- 10% reasoning questions, which are phrased in a way that require logical reasoning steps to answer\n",
@@ -545,7 +547,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -600,77 +602,80 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<font color=\"blue\">\n",
+        "<span style=\"color:blue\">\n",
         "\n",
         "Ragas generally follows these steps:\n",
         "\n",
-        "- Extracts and selects context chunks from documents using both context scoring and context relevancy metrics. These metrics gauge how well the selected context aligns with the question or topic being evaluated.\n",
-        "- Generates keywords from these context chunks. These keywords help form the foundation for creating questions that focus on the most important elements within the context.\n",
-        "- Generate a seed question from keywords\n",
-        "- Iterate between the generator and critic, refining the quesiton until the critic accepts it.\n",
-        "\n",
+        "1. Extracts and selects context chunks from documents using both context scoring and context relevancy metrics. These metrics gauge how well the selected context aligns with the question or topic being evaluated.\n",
+        "1. Generates keywords from these context chunks. These keywords help form the foundation for creating questions that focus on the most important elements within the context.\n",
+        "1. Generate a seed question from keywords\n",
+        "1. Iterate between the generator and critic, refining the quesiton until the critic accepts it.\n",
         "Below is a full example trace.\n",
         "\n",
         "---\n",
         "\n",
-        "**Context Selection and Scoring**\n",
+        "Context Selection and Scoring \n",
+        "\n",
         "`[ragas.testset.filters.DEBUG] context scoring: {'clarity': 3, 'depth': 3, 'structure': 3, 'relevance': 3, 'score': 3.0}`\n",
         "\n",
         "Context Scoring: The system first selects and scores chunks of context based on metrics such as clarity, depth, structure, and relevance. In this example, the context received a high score of 3 across all metrics, meaning it is clear, detailed, well-structured, and relevant to the task.\n",
         "\n",
         "---\n",
         "\n",
-        "**Keyword Extraction**\n",
+        "Keyword Extraction \n",
+        "\n",
         "`[ragas.testset.keywords.INFO] extracted keywords: ['Apple Inc.', 'non-current marketable securities', 'fair value', 'September 30, 2023']`\n",
         "\n",
         "Keyword Extraction: After selecting and scoring the context, the system extracts important key phrases or keywords such as \"Apple Inc.,\" \"non-current marketable securities,\" \"fair value,\" and \"September 30, 2023.\" These keywords are crucial for generating a relevant and meaningful seed question.\n",
         "\n",
         "---\n",
         "\n",
-        "**Seed Question Generation**\n",
+        "Seed Question Generation \n",
+        "\n",
         "`[ragas.testset.evolutions.INFO] seed question generated: What is the total fair value of the Company's non-current marketable securities as of September 30, 2023?`\n",
         "\n",
         "Generator LLM: Initially creates this seed question based on keywords and key phrases extracted from thecontext. In this case, key terms like \"fair value,\" \"non-current marketable securities,\" and \"September 30, 2023\" were identified from the document and used to generate this seed question.\n",
         "\n",
         "---\n",
         "\n",
-        "**First Evaluation by Critic LLM**\n",
+        "`First Evaluation by Critic LLM`\n",
         "\n",
-        "`[ragas.testset.filters.DEBUG] filtered question: {'feedback': \"The question asks for the total fair value of the company's non-current marketable securities as of a specific date (September 30, 2023). It specifies the type of financial asset and the date, but it assumes access to specific financial data or reports that are not provided within the question itself. To improve clarity and answerability, the question could specify the company or provide a brief context about the financial data source, or it could be rephrased to ask for general information about how to determine the fair value of non-current marketable securities.\", 'verdict': 0}`\n",
+        "[ragas.testset.filters.DEBUG] filtered question: {'feedback': \"The question asks for the total fair value of the company's non-current marketable securities as of a specific date (September 30, 2023). It specifies the type of financial asset and the date, but it assumes access to specific financial data or reports that are not provided within the question itself. To improve clarity and answerability, the question could specify the company or provide a brief context about the financial data source, or it could be rephrased to ask for general information about how to determine the fair value of non-current marketable securities.\", 'verdict': 0}\n",
         "\n",
         "Critic LLM: Evaluates the clarity and relevance of the generated seed question against the context. Here, it points out that the question lacks necessary details about which company is being referenced. The Critic suggests improvements based on the context and extracted keywords.\n",
         "\n",
-        "___\n",
+        "---\n",
         "\n",
-        "**First Revision by Generator LLM**\n",
+        "`First Revision by Generator LLM`\n",
         "\n",
-        "`[ragas.testset.evolutions.INFO] rewritten question: What is the total fair value of the Company's non-current marketable securities as of September 30, 2023?`\n",
+        "[ragas.testset.evolutions.INFO] rewritten question: What is the total fair value of the Company's non-current marketable securities as of September 30, 2023?\n",
         "\n",
         "Generator LLM: Attempts a revised version of the question, but the changes are minimal. The Generator LLM hasn't yet fully integrated the feedback from the Critic, so the question remains largely unchanged.\n",
         "\n",
-        "___\n",
+        "---\n",
         "\n",
-        "**Second Evaluation by Critic LLM**\n",
+        "Second Evaluation by Critic LLM\n",
         "\n",
-        "`[ragas.testset.filters.DEBUG] filtered question: {'feedback': \"The question asks for the total fair value of a company's non-current marketable securities as of a specific date, but it still lacks context or specificity regarding the company. To improve clarity and answerability, the question could specify which company or provide brief context about the financial data source.\", 'verdict': 0}\n",
+        "`[ragas.testset.filters.DEBUG] filtered question: {'feedback': \"The question asks for the total fair value of a company's non-current marketable securities as of a specific date, but it still lacks context or specificity regarding the company. To improve clarity and answerability, the question could specify which company or provide brief context about the financial data source.\", 'verdict': 0}`\n",
         "\n",
         "Critic LLM: Once again, the Critic identifies the missing information and suggests adding the specific company name to the question, referencing the key terms and context.`\n",
         "\n",
-        "___\n",
+        "---\n",
         "\n",
-        "**Keyword Extraction and Second Revision by Generator LLM**\n",
+        "Keyword Extraction and Second Revision by Generator LLM\n",
         "\n",
         "`[ragas.testset.evolutions.INFO] rewritten question: What is the total fair value of Apple Inc.'s non-current marketable securities as of September 30, 2023?`\n",
         "\n",
         "Generator LLM: Incorporates the keyword \"Apple Inc.\" as a specific company, which was extracted from the context. This ensures the question is now aligned with the context and key phrases.\n",
         "\n",
-        "___\n",
+        "---\n",
         "\n",
-        "**Final Evaluation by Critic LLM**\n",
+        "Final Evaluation by Critic LLM\n",
         "\n",
         "`[ragas.testset.filters.DEBUG] filtered question: {'feedback': 'The question is now clear and specific, asking for a financial figure related to Apple Inc. and its non-current marketable securities. The inclusion of the company name and a clear date makes it answerable based on relevant financial data. Verdict: 1 (Accepted).'}`\n",
         "\n",
-        "Critic LLM: After evaluating the revised question, it accepts the question because it now fully utilizes the context and key phrases, making it clear, relevant, and answerable."
+        "Critic LLM: After evaluating the revised question, it accepts the question because it now fully utilizes the context and key phrases, making it clear, relevant, and answerable.\n",
+        "</span>"
       ]
     },
     {
@@ -1173,10 +1178,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<font color=\"blue\">Our initial average results from the baseline run are:\n",
+        "<span style=\"color:blue\">\n",
+        "Our initial average results from the baseline run are:\n",
+        "\n",
         "- 65% correct\n",
         "- 24% dope\n",
-        "- 59% helpful"
+        "- 59% helpful\n",
+        "</span>"
       ]
     },
     {
@@ -1263,7 +1271,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<font color=\"blue\"> Changing the chunk size can affect both accuracy and latency in RAG systems.\n",
+        "<span style=\"color:blue\">\n",
+        "Changing the chunk size can affect both accuracy and latency in RAG systems.\n",
+        "\n",
         "\n",
         "**Accuracy**:\n",
         "\n",
@@ -1281,7 +1291,8 @@
         "\n",
         "- **Token limits**: Many LLMs have token limits, and longer chunks might push the input beyond these limits, which can cause truncation or prevent the inclusion of all necessary context.\n",
         "\n",
-        "In summary, optimizing chunk size is crucial for balancing accuracy and performance in RAG systems. Small changes to chunk size can affect accuracy and latency a bit, and large changes to chunk size will affect it a lot."
+        "In summary, optimizing chunk size is crucial for balancing accuracy and performance in RAG systems. Small changes to chunk size can affect accuracy and latency a bit, and large changes to chunk size will affect it a lot.\n",
+        "</span>"
       ]
     },
     {
@@ -1312,7 +1323,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<font color=\"blue\">Modifying the embedding model can affect both accuracy and latency in your RAG system.\n",
+        "<span style=\"color:blue\">\n",
+        "Modifying the embedding model can affect both accuracy and latency in your RAG system.\n",
         "\n",
         "**Accuracy**:\n",
         "\n",
@@ -1324,7 +1336,8 @@
         "- **Model size and complexity**: Larger embedding models with more parameters generally require more time to compute embeddings. This results in higher latency during the embedding stage. On the other hand, smaller models may produce embeddings faster but may not capture as much detail, creating a trade-off between speed and retrieval quality.\n",
         "- **Vector length and similarity searc**h: Longer vectors not only take more time to generate but also increase the computational cost of searching through the vector space during retrieval. When dealing with high-dimensional vectors, search can become slower, leading to increased system latency. \n",
         "\n",
-        "For these reasons, the choice of embedding model can have a big impact on the end system."
+        "For these reasons, the choice of embedding model can have a big impact on the end system.\n",
+        "</span>"
       ]
     },
     {
@@ -1517,8 +1530,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<span style=\"color:blue\">\n",
+        "By changing the embedding model, prompt, and chunk size, we were able to increase correctness (65% -> 80%), dopeness (24% -> 34%), and helpfulness (60% -> 75%). At the same time, the average time per question went up (1.39s -> 1.57s).\n",
+        "\n",
+        "This isn't a high quality experiment, because we changed too much stuff. It's a much better practice to vary one item at a time so that it's easier to tell which effects relate to which change. However, I would imagine that:\n",
+        "\n",
+        "The correctness and helpfulness improvements likely relate to our larger chunk size and better embedding model. If the LLM doesn't have the context it needs to answer, it won't produce correct or helpful output. By improving the search results and giving the model more context, it is more likely to produce correct responses that are useful to the user.\n",
+        "\n",
+        "The prompt changes probably helped the dopeness go up. If we don't tell the system to be dope, it won't respond in a dope tone. However, this metric is still quite low - likely because we haven't defined dopeness very well either in the prompt or in the evaluation. By defining dopeness as \"dope, cool, or lit\" (all slang terms with debateable meanings), we haven't given either the RAG system or the evaluator much to go on. To improve dopeness, we probably need to be more specific here.\n",
+        "\n",
+        "The latency increase is likely due to the longer chunk size - as mentioned above, longer chunks can take longer to retrieve and longer for the LLM to parse when answering. However, it could also be due to the embedding model changes. As discussed in an earlier answer, longer embeddings can increase latency. By default, text-embedding-3-small produces embeddings with a vector length of 1536, whereas text-embedding-3-large has a default vector length of 3072. Although the user has the option to use a shorter vector length with these models if desired, we used the defaults.\n",
+        "</span>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 38,
       "metadata": {},
       "outputs": [
         {
@@ -1536,21 +1566,6 @@
       "source": [
         "from IPython.display import Image\n",
         "Image(\"results.png\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "<font color=\"blue\">By changing the embedding model, prompt, and chunk size, we were able to increase correctness (65% -> 80%), dopeness (24% -> 34%), and helpfulness (60% -> 75%). At the same time, the average time per question went up (1.39s -> 1.57s).\n",
-        "\n",
-        "This isn't a high quality experiment, because we changed too much stuff. It's a much better practice to vary one item at a time so that it's easier to tell which effects relate to which change. However, I would imagine that:\n",
-        "\n",
-        "- The correctness and helpfulness improvements likely relate to our larger chunk size and better embedding model. If the LLM doesn't have the context it needs to answer, it won't produce correct or helpful output. By improving the search results and giving the model more context, it is more likely to produce correct responses that are useful to the user.\n",
-        "\n",
-        "- The prompt changes probably helped the dopeness go up. If we don't tell the system to be dope, it won't respond in a dope tone. However, this metric is still quite low - likely because we haven't defined dopeness very well either in the prompt or in the evaluation. By defining dopeness as \"dope, cool, or lit\" (all slang terms with debateable meanings), we haven't given either the RAG system or the evaluator much to go on. To improve dopeness, we probably need to be more specific here.\n",
-        "\n",
-        "- The latency increase is likely due to the longer chunk size - as mentioned above, longer chunks can take longer to retrieve and longer for the LLM to parse when answering. However, it could also be due to the embedding model changes. As discussed in an earlier answer, longer embeddings can increase latency. By default, text-embedding-3-small produces embeddings with a vector length of 1536, whereas text-embedding-3-large has a default vector length of 3072. Although the user has the option to use a shorter vector length with these models if desired, we used the defaults."
       ]
     }
   ],
