--- a/Week 4/Day 1/Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
+++ b/Week 4/Day 1/Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb
@@ -640,7 +640,7 @@
         "\n",
         "`First Evaluation by Critic LLM`\n",
         "\n",
-        "[ragas.testset.filters.DEBUG] filtered question: {'feedback': \"The question asks for the total fair value of the company's non-current marketable securities as of a specific date (September 30, 2023). It specifies the type of financial asset and the date, but it assumes access to specific financial data or reports that are not provided within the question itself. To improve clarity and answerability, the question could specify the company or provide a brief context about the financial data source, or it could be rephrased to ask for general information about how to determine the fair value of non-current marketable securities.\", 'verdict': 0}\n",
+        "`[ragas.testset.filters.DEBUG] filtered question: {'feedback': \"The question asks for the total fair value of the company's non-current marketable securities as of a specific date (September 30, 2023). It specifies the type of financial asset and the date, but it assumes access to specific financial data or reports that are not provided within the question itself. To improve clarity and answerability, the question could specify the company or provide a brief context about the financial data source, or it could be rephrased to ask for general information about how to determine the fair value of non-current marketable securities.\", 'verdict': 0}`\n",
         "\n",
         "Critic LLM: Evaluates the clarity and relevance of the generated seed question against the context. Here, it points out that the question lacks necessary details about which company is being referenced. The Critic suggests improvements based on the context and extracted keywords.\n",
         "\n",
@@ -648,7 +648,7 @@
         "\n",
         "`First Revision by Generator LLM`\n",
         "\n",
-        "[ragas.testset.evolutions.INFO] rewritten question: What is the total fair value of the Company's non-current marketable securities as of September 30, 2023?\n",
+        "`[ragas.testset.evolutions.INFO] rewritten question: What is the total fair value of the Company's non-current marketable securities as of September 30, 2023?`\n",
         "\n",
         "Generator LLM: Attempts a revised version of the question, but the changes are minimal. The Generator LLM hasn't yet fully integrated the feedback from the Critic, so the question remains largely unchanged.\n",
         "\n",
@@ -662,7 +662,7 @@
         "\n",
         "---\n",
         "\n",
-        "Keyword Extraction and Second Revision by Generator LLM\n",
+        "Second Revision by Generator LLM\n",
         "\n",
         "`[ragas.testset.evolutions.INFO] rewritten question: What is the total fair value of Apple Inc.'s non-current marketable securities as of September 30, 2023?`\n",
         "\n",
