more detailed writeup

--- a/Week 7/Day 2/Advanced_Retrieval_with_LangChain_Assignment.ipynb
+++ b/Week 7/Day 2/Advanced_Retrieval_with_LangChain_Assignment.ipynb
@@ -1730,7 +1730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 43,
       "metadata": {
         "id": "tgDICngKXLGK"
       },
@@ -1740,6 +1740,7 @@
         "from tqdm.asyncio import tqdm_asyncio\n",
         "from ragas import evaluate\n",
         "from datasets import Dataset\n",
+        "import time\n",
         "\n",
         "TEST_DATASET_FILE = \"sdg_test_data.csv\"\n",
         "\n",
@@ -1757,10 +1758,14 @@
         "    contexts = []\n",
         "\n",
         "    print(\"generating responses\")\n",
+        "    start_time = time.time()\n",
+        "\n",
         "    for question in tqdm_asyncio(test_questions,desc=\"Processing Questions\"):\n",
         "        response = await rag_chain.ainvoke({\"question\" : question})\n",
         "        answers.append(response[\"response\"].content)\n",
         "        contexts.append([context.page_content for context in response[\"context\"]])\n",
+        "        \n",
+        "    print(\"Elapsed time to generate answers:\",time.time()-start_time,\"seconds\")\n",
         "\n",
         "    # Put in huggingface dataset format and save it for later re-use\n",
         "    response_dataset = Dataset.from_dict({\n",
@@ -1784,7 +1789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -1799,13 +1804,20 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Processing Questions: 100%|██████████| 29/29 [00:48<00:00,  1.69s/it]\n"
+            "Processing Questions: 100%|██████████| 29/29 [00:53<00:00,  1.83s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elapsed time to generate answers: -53.09505295753479 seconds\n"
           ]
         },
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "91df5f227bc048a486c43baceb37357f",
+              "model_id": "9c0bdea4417d41b982b9880b03b5c891",
               "version_major": 2,
               "version_minor": 0
             },
@@ -1820,7 +1832,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'answer_relevancy': 0.9116, 'context_precision': 0.7586, 'context_recall': 0.8276}\n"
+            "{'answer_relevancy': 0.9370, 'context_precision': 0.7529, 'context_recall': 0.8621}\n"
           ]
         }
       ],
@@ -1830,7 +1842,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [
         {
@@ -1845,13 +1857,20 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Processing Questions: 100%|██████████| 29/29 [00:35<00:00,  1.23s/it]\n"
+            "Processing Questions: 100%|██████████| 29/29 [00:37<00:00,  1.29s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elapsed time to generate answers: 37.37549805641174 seconds\n"
           ]
         },
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "a81910189070461ea5f14291436121d0",
+              "model_id": "35aa9ace8f0f4cc69195b19500a5eb11",
               "version_major": 2,
               "version_minor": 0
             },
@@ -1866,7 +1885,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'answer_relevancy': 0.8599, 'context_precision': 0.6772, 'context_recall': 0.7241}\n"
+            "{'answer_relevancy': 0.8661, 'context_precision': 0.6389, 'context_recall': 0.7069}\n"
           ]
         }
       ],
@@ -1876,7 +1895,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [
         {
@@ -1891,13 +1910,20 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Processing Questions: 100%|██████████| 29/29 [01:38<00:00,  3.39s/it]\n"
+            "Processing Questions: 100%|██████████| 29/29 [01:38<00:00,  3.40s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elapsed time to generate answers: 98.71108818054199 seconds\n"
           ]
         },
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "4571e8a0585b4493973534d9a31d13df",
+              "model_id": "4b9e757e5988436397dee49aa0299a57",
               "version_major": 2,
               "version_minor": 0
             },
@@ -1912,7 +1938,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'answer_relevancy': 0.9110, 'context_precision': 0.6864, 'context_recall': 0.8046}\n"
+            "{'answer_relevancy': 0.8413, 'context_precision': 0.6920, 'context_recall': 0.7644}\n"
           ]
         }
       ],
@@ -1922,7 +1948,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [
         {
@@ -1937,13 +1963,20 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Processing Questions: 100%|██████████| 29/29 [00:50<00:00,  1.76s/it]\n"
+            "Processing Questions: 100%|██████████| 29/29 [00:43<00:00,  1.49s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elapsed time to generate answers: 43.22631883621216 seconds\n"
           ]
         },
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "8c5061fa97744edf9780e6b52c33d805",
+              "model_id": "9f9329e2bd2444f489da043edd921006",
               "version_major": 2,
               "version_minor": 0
             },
@@ -1958,7 +1991,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'answer_relevancy': 0.8646, 'context_precision': 0.7443, 'context_recall': 0.7069}\n"
+            "{'answer_relevancy': 0.8670, 'context_precision': 0.7443, 'context_recall': 0.7011}\n"
           ]
         }
       ],
@@ -1968,7 +2001,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [
         {
@@ -1983,13 +2016,20 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Processing Questions: 100%|██████████| 29/29 [01:44<00:00,  3.59s/it]\n"
+            "Processing Questions: 100%|██████████| 29/29 [01:47<00:00,  3.71s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elapsed time to generate answers: 107.63798379898071 seconds\n"
           ]
         },
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "18d540d94a704a478e2d7ad9f093abc6",
+              "model_id": "9a083987d4fd4e4d9edadf092f994e93",
               "version_major": 2,
               "version_minor": 0
             },
@@ -2004,7 +2044,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'answer_relevancy': 0.9307, 'context_precision': 0.7018, 'context_recall': 0.9310}\n"
+            "{'answer_relevancy': 0.9423, 'context_precision': 0.6771, 'context_recall': 0.8793}\n"
           ]
         }
       ],
@@ -2014,7 +2054,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [
         {
@@ -2029,13 +2069,20 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Processing Questions: 100%|██████████| 29/29 [00:46<00:00,  1.61s/it]\n"
+            "Processing Questions: 100%|██████████| 29/29 [00:47<00:00,  1.64s/it]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Elapsed time to generate answers: 47.702778816223145 seconds\n"
           ]
         },
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "4715c9fb13324d2ebb87f3fbe3102c8b",
+              "model_id": "3b02e42828f34634baf57d3e0e45c406",
               "version_major": 2,
               "version_minor": 0
             },
@@ -2050,7 +2097,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "{'answer_relevancy': 0.8669, 'context_precision': 0.6760, 'context_recall': 0.7069}\n"
+            "{'answer_relevancy': 0.8743, 'context_precision': 0.6807, 'context_recall': 0.6207}\n"
           ]
         }
       ],
@@ -2069,18 +2116,20 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "| Retrieval Technique       | Answer Relevancy  | Context Precision | Context Recall    |\n",
-        "|---------------------------|-------------------|-------------------|-------------------|\n",
-        "| Naive                     | 86.0%             | 67.7%             | 72.4%             |\n",
-        "| Naive + Semantic Chunking | 86.7%             | 67.6%             | 70.7%             |\n",
-        "| Contextual Compression    | 91.2%             | **75.9%**         | 82.8%             |            \n",
-        "| Multi Query               | 91.1%             | 68.6%             | 80.5%             |\n",
-        "| Parent Document           | 86.5%             | 74.4%             | 70.7%             |\n",
-        "| Ensemble                  | **93.1%**         | 70.2%             | **93.1%**         |\n",
+        "| Retrieval Technique       | Answer Relevancy  | Context Precision | Context Recall    | Total Time    | Cost  |\n",
+        "|---------------------------|-------------------|-------------------|-------------------|---------------|-------|\n",
+        "| Naive                     | 86.6%             | 63.9%             | 70.7%             | 37.4s         | $     |                     \n",
+        "| Naive + Semantic Chunking | 87.4%             | 68.1%             | 62.1%             | 47.7s         | $     |\n",
+        "| Contextual Compression    | 93.7%             | **75.3%**         | **86.2%**         | 53.1s         | $$    |          \n",
+        "| Multi Query               | 91.1%             | 68.6%             | 80.5%             | 98.7s         | $$    |\n",
+        "| Parent Document           | 86.7%             | 74.4%             | 70.7%             | 43.2s         | $$    |\n",
+        "| Ensemble                  | **94.2%**         | 67.8%             | 87.9%             | 108s          | $$$   |\n",
         "\n",
-        "For this dataset, the ensemble approach, which combines all five of the other retrieval techniques, achieves the highest metrics overall, scoring 93% for both answer relevancy and context recall. This is 2 percentage points better than the next-best model for answer relevancy, and an impressive 10+ percentage points better for recall. As with ensemble methods in many other machine learning domains, combining several good models and letting them \"vote\" according to some weighting scheme can often achieve better results than a single model by itself. The one area where ensemble does not excel is context precision, where contextual compression with Cohere's ReRank performs the best. This means that our ensemble is retrieving the right docs, but not necessarily always ranking the best one at the top of the results. Cohere's model, which is specificially designed for ranking, outperforms in this one area.\n",
+        "For this dataset, the ensemble technique achieves the highest metrics for answer relevancy -- out of the three we are using here, this is likely the most important one from a user standpoint. However, the Cohere reranker (contextual compression) outperforms in context precision and context recall, at a much lower time and cost compared to the ensemble, so this is likely the best technique for this use case. We have small documents and must combine many to answer some of the questions, so it makes sense that contextual compression with reranking would be a high performing approach.\n",
         "\n",
-        "Does this mean ensemble is \"best\" for this data? It depends on the use case. The ensemble method takes longer and costs more than the other methods. In a real-world application at scale, this could be undesirable -- in an interactive chatbot, in many use cases, users may not want to wait three times as long to get a slightly-better answer. For this reason, we can say that ensemble has the 'best' metrics, but without more information we can't say whether it is 'best' to use in practice."
+        "If we were to try an additional run, I'd try combining contextual compression with semantic chunking. \n",
+        "\n",
+        "Note that I didn't measure costs exactly, though it is possible to do in Langsmith if that were important. Instead, I've included a comparative representation of cost in the table, with the naive techniques being lowest cost, the techniques that generate extra LLM calls (multi query) or external paid services (Cohere) in the middle, and the ensemble technique which combines the expenses of all other techniques as the most expensive."
       ]
     }
   ],
